# mdbook-djot

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.dj  README.md  REUSE.toml  cspell.json
.githooks/: pre-commit
src/: lib.rs  main.rs
test_book/: Makefile  book.toml
test_book/src/: 404.md  README.dj  SUMMARY.md  is_not_preprocessed.md  prefix.dj  suffix.dj
test_book/src/djot_specific_block/: README.dj  div.dj  footnote.dj  raw_block.dj
test_book/src/djot_specific_inline/: README.dj  comment.dj  footnote.dj  highlight.dj  inline_attributes.dj  insert.dj  raw_inline.dj  span.dj  subscript.dj  superscript.dj  symbols.dj
test_book/src/individual/: README.dj  blockquote.dj  code.dj  emphasis.dj  heading.dj  image.dj  linebreak.dj  link_hr.dj  list.dj  mathjax.dj  mixed.dj  paragraph.dj  strikethrough.dj  table.dj  task.dj  thematic_break.dj
test_book/src/languages/: README.dj  highlight.dj
test_book/src/rust/: README.dj  rust_codeblock.dj
