[package]
authors = ["David Campbell <dcampbell24@gmail.com>"]
name = "mdbook-djot"
version = "0.1.2"
edition = "2021"
description = "Djot plugin for mdBook."
license = "MPL-2.0"
repository = "https://github.com/dcampbell24/mdbook-djot"
readme = "README.md"
keywords = ["djot", "jotdown", "mdBook"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = "4"
jotdown = "0.6"
mdbook = "0.4"
semver = "1"
serde_json = "1"

[lints.clippy]
cargo = "warn"
pedantic = "warn"

multiple_crate_versions = { level = "allow", priority = 1 }
