# SPDX-FileCopyrightText: 2025 David Lawrence Campbell
# SPDX-License-Identifier: MPL-2.0

[package]
name = "mdbook-djot"
version = "0.10.0"
edition = "2024"
rust-version = "1.88"
description = "Djot plugin for mdBook."
license = "MPL-2.0"
repository = "https://github.com/dcampbell24/mdbook-djot"
readme = "README.md"
keywords = ["djot", "jotdown", "mdBook"]
categories = ["command-line-utilities"]
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
anyhow = "1"
clap = "4"
env_logger = "0.11"
jotdown = "0.10"
log = "0.4"
mdbook-preprocessor = "0.5"
semver = "1"
serde_json = "1"

[profile.release]
lto = "thin"

[lints.clippy]
cargo = "deny"
complexity = "deny"
correctness = "deny"
pedantic = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"
multiple_crate_versions = { level = "allow", priority = 1 }